refactor: On string check
1. If its "" better to check with isBlank().